Fixes #8801 - Adds a scrollbar to the search bar auto completer

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -553,3 +553,8 @@ html.turbolinks-progress-bar::before {
   display: block;
   float: left;
 }
+
+.ui-autocomplete {
+  max-height: 300px;
+  overflow-y: auto;
+}
